// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots about/unit/AboutCard Blog 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div
      className="css-1tt8wgx"
    >
      <div
        className="chakra-stack css-18lr9dg"
      >
        <h2
          className="chakra-heading css-p5offx"
        >
          ブログを書く
        </h2>
        <div
          className="css-joj9ft"
        >
          <div>
            <img
              alt="ブログを書く"
              height={250}
              src="/blog.svg"
              width={275}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots about/unit/AboutCard Post 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div
      className="css-1tt8wgx"
    >
      <div
        className="chakra-stack css-18lr9dg"
      >
        <h2
          className="chakra-heading css-p5offx"
        >
          ファッションを投稿
        </h2>
        <div
          className="css-joj9ft"
        >
          <div>
            <img
              alt="ファッションを投稿"
              height={250}
              src="/post.svg"
              width={275}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots about/unit/AboutCard Show 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div
      className="css-1tt8wgx"
    >
      <div
        className="chakra-stack css-18lr9dg"
      >
        <h2
          className="chakra-heading css-p5offx"
        >
          投稿を見る
        </h2>
        <div
          className="css-joj9ft"
        >
          <div>
            <img
              alt="投稿を見る"
              height={250}
              src="/show.svg"
              width={275}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots common/unit/DarkmodeToggle Darkmode Toggle Switch 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <span
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
    >
      <label
        className="chakra-switch css-7tq0uz"
      >
        <input
          checked={false}
          className="chakra-switch__input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          style={
            Object {
              "border": "0px",
              "clip": "rect(0px, 0px, 0px, 0px)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0px",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
        />
        <span
          aria-hidden={true}
          className="chakra-switch__track css-1vexzru"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <span
            className="chakra-switch__thumb css-khwc2z"
          />
        </span>
      </label>
    </span>
  </div>
</div>
`;

exports[`Storyshots common/unit/IconButton Google Login 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-1i6oq0n"
      type="button"
    >
      <p
        className="chakra-text css-17pa6hf"
      >
        <svg
          enableBackground="new 0 0 48 48"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          version="1.1"
          viewBox="0 0 48 48"
          width="1em"
          x="0px"
          xmlns="http://www.w3.org/2000/svg"
          y="0px"
        >
          <path
            d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12
	c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24
	c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"
            fill="#FFC107"
          />
          <path
            d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657
	C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"
            fill="#FF3D00"
          />
          <path
            d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36
	c-5.202,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z"
            fill="#4CAF50"
          />
          <path
            d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571
	c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z"
            fill="#1976D2"
          />
        </svg>
      </p>
      Googleでログイン
    </button>
  </div>
</div>
`;

exports[`Storyshots common/unit/IconButton No Login Try 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-1i0huya"
      type="button"
    >
      ログインせずに試す
      <p
        className="chakra-text css-1xn0r6m"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M294.1 256L167 129c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.3 34 0L345 239c9.1 9.1 9.3 23.7.7 33.1L201.1 417c-4.7 4.7-10.9 7-17 7s-12.3-2.3-17-7c-9.4-9.4-9.4-24.6 0-33.9l127-127.1z"
          />
        </svg>
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots common/unit/IconButton Twitter Login 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-1bd9ila"
      type="button"
    >
      <p
        className="chakra-text css-d2tb5a"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
          />
        </svg>
      </p>
      Twitterでログイン
    </button>
  </div>
</div>
`;

exports[`Storyshots common/unit/NextImage Blog 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div>
      <img
        alt="test"
        height={400}
        src="/blog.svg"
        width={440}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots common/unit/NextImage Footer Logo 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div>
      <img
        alt="アプリケーションロゴ"
        height={60}
        src="/footerLogo.svg"
        width={120}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots common/unit/NextImage Header Logo 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div>
      <img
        alt="アプリケーションロゴ"
        height={90}
        src="/logo.svg"
        width={172}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots common/unit/NextImage Not Found 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div>
      <img
        alt="NotFound Error 404"
        height={315}
        src="/Error_404.svg"
        width={500}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots common/unit/NextImage Post 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div>
      <img
        alt="test"
        height={400}
        src="/post.svg"
        width={440}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots common/unit/NextImage Show 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div>
      <img
        alt="test"
        height={400}
        src="/show.svg"
        width={440}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots common/unit/NormalButton Login 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-qslz7q"
      type="button"
    >
      ログイン
    </button>
  </div>
</div>
`;

exports[`Storyshots common/unit/NormalButton Post 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-10vawgf"
      type="button"
    >
      投稿
    </button>
  </div>
</div>
`;

exports[`Storyshots common/unit/NormalButton Register 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-10vawgf"
      type="button"
    >
      登録
    </button>
  </div>
</div>
`;

exports[`Storyshots common/unit/NormalButton Signup 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-10vawgf"
      type="button"
    >
      新規会員登録
    </button>
  </div>
</div>
`;

exports[`Storyshots layout/containers/Header Loggined Header 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div
      className="css-162tvoi"
    />
  </div>
</div>
`;

exports[`Storyshots layout/containers/Header Logouted Header 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div
      className="css-1icstj2"
    />
  </div>
</div>
`;

exports[`Storyshots layout/unit/SearchBar Default Search Bar 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div
      className="chakra-input__group css-1jtxxi8"
    >
      <div
        className="chakra-input__left-element css-1nfwf9a"
        size="sm"
      >
        <svg
          className="chakra-icon css-suqwlm"
          focusable={false}
          viewBox="0 0 24 24"
        >
          <path
            d="M23.414,20.591l-4.645-4.645a10.256,10.256,0,1,0-2.828,2.829l4.645,4.644a2.025,2.025,0,0,0,2.828,0A2,2,0,0,0,23.414,20.591ZM10.25,3.005A7.25,7.25,0,1,1,3,10.255,7.258,7.258,0,0,1,10.25,3.005Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <input
        className="chakra-input css-135699n"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="キーワードで検索"
        type="text"
      />
    </div>
  </div>
</div>
`;
